--- a/client/src/components/Vehicle/Vehicle.scss
+++ b/client/src/components/Vehicle/Vehicle.scss
@@ -53,3 +53,16 @@
     }
    
 }
+// table {
+//   counter-reset: rowNumber;
+// }
+
+// table tr {
+//   counter-increment: rowNumber;
+// }
+
+// table tr td:first-child::before {
+//   content: counter(rowNumber);
+//   min-width: 1em;
+//   margin-right: 0.5em;
+// }
