--- a/client/src/components/TopNav/Wrapper.css
+++ b/client/src/components/TopNav/Wrapper.css
@@ -1,10 +1,10 @@
 .wrapper {
-    padding-top: 25px;
+    padding-top: 10px;
     /* background: rgb(52, 134, 70); */
-    height: 100%;
+    /* height: 300px; */
     display: flex;
     flex-flow: row wrap;
-    padding: 20px;
+    /* padding: 10px; */
     justify-content: space-around;
     align-content: center;
     overflow: auto;
@@ -14,9 +14,9 @@
   #jumbothron {
     /* background-color: rgb(99, 219, 183); */
     margin: 0 auto;
-    margin-top: 10px;
-    width:100%;
-    height: 100%;
+    /* margin-top: 10px; */
+    width:50%;
+    /* height: 5 0%; */
     /* font-family: $text-font; */
     background-image: url("/assets/images/???.jpg");
     
