added nav buttons inside footer.js

--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -3,6 +3,7 @@
 .footer {
     width: 100%;
     margin: 0 auto;
+    padding: 5px;
     font-family: $text-font;
     color: $light-text;
     position: relative;
