Update space and Comment is workig now

--- a/client/src/components/Vehicle/Vehicle.scss
+++ b/client/src/components/Vehicle/Vehicle.scss
@@ -58,6 +58,14 @@ table {
     counter-increment: tableCount; 
 }
 
+.spaceClass {
+    outline: none;
+    border: none;
+    background: none;
+    resize: none;
+    min-height: 100px;
+}
+
 // #parking3, #ezlogo
 // {
 //     display: none;
