--- a/client/src/components/Payment/Payment.scss
+++ b/client/src/components/Payment/Payment.scss
@@ -11,7 +11,7 @@
     // background-color: #222;
     height: 150px;
     padding: 20px;
-    color: #073127;;
+    color: #073127;
   }
   
   .App-intro {
@@ -41,6 +41,10 @@
     background-color: gray;
   }
   
+  a {
+    text-decoration: none !important;
+  }
+
 //    #parking3, #ezlogo
 //     {
 //         display: none;
