--- a/client/src/components/Payment/Payment.scss
+++ b/client/src/components/Payment/Payment.scss
@@ -1,24 +1,24 @@
-.Scan {
+.Pay {
     text-align: center;
   }
   
-  .Scan-logo {
-    /* animation: Scan-logo-spin infinite 20s linear; */
+  .Pay-logo {
+    /* animation: Pay-logo-spin infinite 20s linear; */
     height: 80px;
   }
   
-  .Scan-header {
+  .Pay-header {
     // background-color: #222;
     height: 150px;
     padding: 20px;
     color: #073127;;
   }
   
-  .Scan-intro {
+  .Pay-intro {
     font-size: large;
   }
   
-  @keyframes Scan-logo-spin {
+  @keyframes Pay-logo-spin {
     from {
       transform: rotate(0deg);
     }
