made some changes in css then deploying to heroku

--- a/client/src/components/Payment/Payment.scss
+++ b/client/src/components/Payment/Payment.scss
@@ -3,8 +3,9 @@
   }
   
   .Pay-logo {
-    /* animation: Pay-logo-spin infinite 20s linear; */
-    height: 80px;
+    height: 60px;
+    // width: 40%;
+    // height: 65%;
   }
   
   .Pay-header {
@@ -33,7 +34,7 @@
     background-color: orangered;
     border-radius: 8px;
     text-decoration: none;
-    margin-top: 20px;
+    margin-top: 15%;
     display: inline-block;
   }
   
