--- a/client/src/components/Vehicle/Vehicle.scss
+++ b/client/src/components/Vehicle/Vehicle.scss
@@ -103,3 +103,8 @@ table {
     /* Add a grey background color to the table header and on hover */
     background-color:rgb(235,247,245);
   }
+
+  th {
+    background-color: rgb(6, 85, 141);
+    color: white;
+} 
