--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -41,7 +41,12 @@
 
 
 
-
+.footer {
+    background:rgb(203,251,254); /* For browsers that do not support gradients */
+    height: 80px;
+    //  background-image: linear-gradient(rgb(25,177,164), rgb(25,177,164)); /* Standard syntax (must be last) */
+    }
+    
 // #reactLogo {
 //     -webkit-animation:spin 10s linear infinite;
 //     -moz-animation:spin 10s linear infinite;
