--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -8,7 +8,7 @@ html, body {
     position: relative;
 
     // background-color: rgb(93,136,187);
-    background: url("/assets/images/login_bg.jpg") no-repeat center center fixed; 
+    background: url("/assets/images/login_bg3.png") no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
