changed Profile-Dashboard & profile-dashboard

--- a/client/src/pages/Dashboard/Dashboard.scss
+++ b/client/src/pages/Dashboard/Dashboard.scss
@@ -1,6 +1,6 @@
 @import "../../sass/variable.scss";
 
-.profilePage {
+.dashboardPage {
     margin: 0 auto;
     margin-top: 25px;
 
@@ -32,7 +32,7 @@
         }
     }
 
-    // .profileBox {
+    // .dashboardBox {
     //     #userTitle {
     //         text-align: center
     //     }
