--- a/client/src/components/Vehicle/Vehicle.scss
+++ b/client/src/components/Vehicle/Vehicle.scss
@@ -71,17 +71,6 @@ table {
 //     display: none;
 // }
 
-// #myInput {
-//     background-image: url('/css/searchicon.png'); /* Add a search icon to input */
-//     background-position: 10px 12px; /* Position the search icon */
-//     background-repeat: no-repeat; /* Do not repeat the icon image */
-//     width: 100%; /* Full-width */
-//     font-size: 16px; /* Increase font-size */
-//     padding: 12px 20px 12px 40px; /* Add some padding */
-//     border: 1px solid #ddd; /* Add a grey border */
-//     margin-bottom: 12px; /* Add some space below the input */
-//   }
-
 #myTable {
     border-collapse: collapse; /* Collapse borders */
     width: 100%; /* Full-width */
@@ -101,10 +90,29 @@ table {
   
   #myTable tr.header, #myTable tr:hover {
     /* Add a grey background color to the table header and on hover */
-    background-color:rgb(235,247,245);
+    background-color:rgb(14,236,180)
+    ;
   }
 
   th {
     background-color: rgb(6, 85, 141);
     color: white;
 } 
+
+table,
+thead,
+tr,
+tbody,
+th,
+td {
+  text-align: center;
+}
+
+.table td {
+  text-align: center;
+}
+
+.loginBtn
+{
+    background: rgb(4, 132, 172) !important;  
+}
