--- a/client/src/components/Signup/Signup.css
+++ b/client/src/components/Signup/Signup.css
@@ -8,6 +8,11 @@
     background: forestgreen !important;
 }
 
+#signupBtn
+{
+    background: rgb(4, 132, 172) !important;  
+}
+
 /* #parking3, #ezlogo
 {
     display: none;
