--- a/client/src/components/Notify/SMSForm.css
+++ b/client/src/components/Notify/SMSForm.css
@@ -17,6 +17,8 @@
 .sms-form button {
   font-size: 1em;
   width: 100%;
+  color: black;
+  background-color: rgb(10, 138, 6);
 }
 .sms-form.error {
   outline: 2px solid #f00;
