--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -1,13 +1,11 @@
 @import "../../sass/variable.scss";
 
-
 .homeBox {
     margin: 0 auto;
     margin-top: 10px;
     width:100%;
     height: 300px;
     font-family: $text-font;
-    // background-image: url("/assets/images/???.jpg");
     
 
     
@@ -16,3 +14,12 @@
         font-weight: bold;
     }
 }
+
+
+.btn {
+    font-size: 1em;
+    width: 35%;
+    color: black;
+    background-color: rgb(10, 138, 6);
+  }
+
