removed font size & weight for buttons forn in home.js

--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -9,15 +9,15 @@
     
 
     
-    button {
-        font-size: 1.3em;
-        font-weight: bold;
-    }
+    // button {
+    //     font-size: 1.3em;
+    //     font-weight: bold;
+    // }
 }
 
 
 .btn {
-    font-size: 1em;
+    // font-size: 1em;
     width: 35%;
     color: black;
     background-color: rgb(10, 138, 6);
