--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -8,7 +8,12 @@
     font-family: $text-font;
     
 
-    
+    .btn {
+        font-size: 1em;
+        width: 35%;
+        color: black;
+        background-color: rgb(10, 138, 6);
+      }
     // button {
     //     font-size: 1.3em;
     //     font-weight: bold;
@@ -16,10 +21,5 @@
 }
 
 
-.btn {
-    // font-size: 1em;
-    width: 35%;
-    color: black;
-    background-color: rgb(10, 138, 6);
-  }
+
 
