--- a/client/src/components/Payment/Payment.scss
+++ b/client/src/components/Payment/Payment.scss
@@ -3,15 +3,17 @@
   }
   
   .Pay-logo {
-    height: 55%;
-    // width: 40%;
+    height: 50%;
+    margin: auto;
+    width: auto;
     // height: 65%;
   }
   
   .Pay-header {
     // background-color: #222;
-    height: 150px;
-    padding: 20px;
+    height: 120px;
+    margin: auto;
+    // padding: 20px;
     color: #073127;;
   }
   
