removed left margin for images in payment.js

--- a/client/src/components/Payment/Payment.scss
+++ b/client/src/components/Payment/Payment.scss
@@ -3,8 +3,9 @@
   }
   
   .Pay-logo {
-    height: 50%;
+    height: 50%;//dont go more then 50%
     margin: auto;
+    margin-top: 2%;
     width: auto;
     // height: 65%;
   }
@@ -13,6 +14,7 @@
     // background-color: #222;
     height: 120px;
     margin: auto;
+    margin-top: 2%;
     // padding: 20px;
     color: #073127;;
   }
