--- a/client/src/components/Payment/Payment.scss
+++ b/client/src/components/Payment/Payment.scss
@@ -6,6 +6,7 @@
     height: 50%;//dont go more then 50%
     margin: auto;
     margin-top: 2%;
+    margin-right: 3%;
     width: auto;
     // height: 65%;
   }
