changed images height to 43% in payment.js

--- a/client/src/components/Payment/Payment.scss
+++ b/client/src/components/Payment/Payment.scss
@@ -3,10 +3,10 @@
   }
   
   .Pay-logo {
-    height: 50%;//dont go more then 50%
+    height: 43%;//dont go more then 50%
     margin: auto;
     margin-top: 2%;
-    margin-right: 3%;
+    // margin-right: 3%;
     width: auto;
     // height: 65%;
   }
