fixed scanBox height by w-300px & m-h 300px

--- a/client/src/components/Payment/Payment.scss
+++ b/client/src/components/Payment/Payment.scss
@@ -3,7 +3,7 @@
   }
   
   .Pay-logo {
-    height: 43%;//dont go more then 50%
+    height: 43%;//always keep it <50% for images to be more responsive
     margin: auto;
     margin-top: 2%;
     // margin-right: 3%;
