--- a/client/src/components/Scan/Scan.scss
+++ b/client/src/components/Scan/Scan.scss
@@ -24,12 +24,55 @@
     color: #61dafb;
   }
   
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
+  #scanBox
+  {
+    width: 300px;
+    min-height: 300px;
+    position: relative;
+    margin:0 auto;
+    line-height: 1.4em;
   }
+
+  
+//   /* If in mobile screen with maximum width 479px. The iPhone screen resolution is 320x480 px (except iPhone4, 640x960) */    
+//   @media only screen and (max-width: 980px) {
+//     #scanBox {
+//       width: 40%;
+//       min-height: 60%;
+//     }
+    
+//     }
+    
+//   @media only screen and (max-width: 768px) {
+//     #scanBox {
+//       width: 50%;
+//       min-height: 60%;
+//     }
+    
+//     }
+   
+// @media only screen and (max-width: 640px) {
+  
+//   #scanBox {
+//     width: 60%;
+//     min-height: 60%;
+//   }
+
+//   /* If in mobile screen with maximum width 479px. The iPhone screen resolution is 320x480 px (except iPhone4, 640x960) */    
+//   @media only screen and (width: 60%){
+//     #scanBox { 
+//       width: 70%;
+//       min-height: 60%;
+//     }
+//   }
+// }
+
+//   @keyframes App-logo-spin {
+//     from {
+//       transform: rotate(0deg);
+//     }
+//     to {
+//       transform: rotate(360deg);
+//     }
+//   }
   
