--- a/client/src/components/Vehicle/Vehicle.scss
+++ b/client/src/components/Vehicle/Vehicle.scss
@@ -2,6 +2,15 @@
 
 .dashboardPage {
     margin: 0 auto;
+    margin-top: 10px;
+    width:100%;
+    height: 300px;
+    font-family: $text-font;
+    
+}
+
+.dashboardPage {
+    margin: 0 auto;
     margin-top: 25px;
 
     .noUser {
