--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -5,7 +5,7 @@
     width: 100%;
     margin: 0 auto;
     padding: 5px;
-    font-family: $text-font;
+    //font-family: $text-font;
     // color: $light-text;
 
     position: fixed;
